// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Func → Decompiler → Pseudocode snapshot dicts 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 119863 */
function (arg0, arg1) {
    var5, var6 = NULLSWAPIFNOT(x=DICTGET(n=8, D=arg0, k=arg1));
    return var5, var6
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot ifs 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg2, arg0, arg1) {
    var10 = ADDCONST(x=arg0 | c=-10);
    var11 = ADDCONST(x=arg1 | c=20);
    var12 = arg0 * arg1;
    IFELSE(c2=function (arg2, arg3, arg4, arg0, arg1) {
        var18 = arg1 + arg3 / arg4;
        return var18
    }, c=function (arg0, arg1, arg2, arg3, arg4, arg5) {
        var15 = arg5 + arg3 / arg4;
        return arg2, var15
    }, f=arg0 > arg1);
    return arg2, arg0, arg1, var10, var11, var12
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot multi arg use 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg0, arg1) {
    var9 = ((arg0 + arg1) + arg0) + arg1;
    return var9
}
"
`;

exports[`Func → Decompiler → Pseudocode snapshot simple arithmetic 1`] = `
"/* methodId: 0 */
function recv_internal () {
}

/* methodId: 83863 */
function (arg1, arg0) {
    var0 = arg1 + arg0;
    return var0
}
"
`;
